# oopLab_4

./: CMakeLists.txt  README.md
impl/: Array.ipp  Figure.ipp  Rectangle.ipp  Rombus.ipp
include/: Array.hpp  Figure.hpp  Point.hpp  Rectangle.hpp  ResultFunctions.hpp  Rombus.hpp  Trapez.hpp
inline/: Array.ipp  Figure.ipp  Point.ipp  Rectangle.ipp  ResultFunctions.ipp  Rombus.ipp  Trapez.ipp
src/: main.cpp
test/: FigureTest.cpp
